@@ -1,3 +1,11 @@
+2011-05-13  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
+
+	Apply from mainline. 
+	2011-05-12  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
+	PR gas/12715
+	* gas/arm/neon-const.s: Add testcase for 64-bit Neon constants.
+	* gas/arm/neon-const.d: Likewise.
+
 2011-04-27  Alan Modra  <amodra@gmail.com>
 
 	Apply from mainline.
