@@ -1,3 +1,11 @@
+2011-05-13  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
+
+	Apply from mainline.
+	2011-05-12  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
+	PR gas/12715
+	* config/tc-arm.c (parse_big_immediate):  Fix parsing of 64-bit
+	immediates on 32-bit hosts.
+
 2011-05-13  Frederic Marchal  <fmarchal@perso.be>
 
 	PR gas/12755
